# Deep_Learning

./: .gitignore  Actividad_S05_03.txt  S05_03_Ejemplo_de_generador_de_datos.ipynb
Airplane_location/: README.md  TestYolo2BB.ipynb  TrainYolo2BB.ipynb
Airplane_location/src/: Utils.py  custom_load.py  data_loading.py  data_loading_test.py  fit_func.py  fit_func_dual.py  iou_giou.py  yolo_loss.py  yolo_model_1.py  yolo_model_2.py  yolo_model_3.py  yolo_model_4.py
Exam1/: Actividad_07_04_Rumbo_al_examen_I.ipynb  Exam_part_1.ipynb  Exam_part_1.py
Exam_part_ii/: Readme.md
Exam_part_ii/just_classification/: custom_load_resnet.py  data_loading_resnet.py  resnet.py
Language_processing/: RNN texto.ipynb
Language_processing/Embedding/: cbow_model.py
Language_processing/Recursive_NN_Reviews/: sequencial_model.py
Leaf_illness_detection/: data_loading.md  data_loading.py  level_classes.md  level_classes.py  resnet18_34_model.py  resnet18_model.py  set_test_data.py
Leaf_illness_detection/Report/: report.md
Leaf_illness_detection/model_by_problem/: alexnet.py
Project/: README.md  check_images.py  check_indicators.py  face_data.csv  link.txt
Project/FasterRCNN-ResnetInceptionv1/: CreateEmbedding.ipynb  RunPipeline.ipynb  TtrainProjectFastRCNN.ipynb
Project/Report/: Project_definition.md
Project/clean_data_files/: move_files.py
data-format/: data_format.md
diagnostico/: config_global.yml  mnist.py  mnist_test.py
diagnostico/sdk/: requirements.txt  setup.cfg
diagnostico/sdk/diagnostic_package/: Utils.py
pre-project/: Project_definition.md
(+29 files in other folders)
