[metadata]
name = diagnostic_package
version = 0.0.1
author = "My self"
description = "A small package for diagnostic test"
platforms = Linux, Windows


[options]
packages = 
    diagnostic_package
install_requires =
    numpy>=1.26.1
    pandas>=2.1.1
    tensorflow>=2.14.0
    pyyaml>=6.0.1

python_requires = >=3.6

